2007-04-30  Vincent Untz  <vuntz@gnome.org>

	* panel-util.[ch]: (missing_pixbuf): unused => kill
	* menu.c: remove useless include
	(menus_have_icons_changed): remove useless code

==================== 2.18.1 ====================

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_lock_screen_action_get_command): if EUID is 0,
	return NULL if the user wants to lock the screen: gnome-screensaver
	and xscreensaver don't support root locking the screen.
	Fix bug #424545.

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (panel_run_dialog_destroy): call
	panel_run_dialog_disconnect_pixmap()
	(panel_run_dialog_disconnect_pixmap): new function, to disconnect
	signals
	Fix bug happening because we get a screen_changed signal when the
	widget is destroyed and the data read in the handler has already been
	freed.
	Fix bug #413921. Patch by Ray Strode <rstrode@redhat.com>

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_error_dialog): don't use the error message as a
	format string.
	Fix bug #418186. Patch by Chris Wilson <chris@chris-wilson.co.uk>

2007-03-15  Vincent Untz  <vuntz@gnome.org>

	* gnome-panel.desktop.in: fix NoDisplay value to be valid

==================== 2.18.0 ====================

2007-03-06  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install gnome-panel.desktop for bug-buddy
	* gnome-panel/gnome-panel.desktop.in: new
	Fix bug #382584

2007-03-05  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.glade: fix alignment of a button. This is not a UI
	freeze break since this was wrongly introduced by glade with the
	commit on 2007-02-18.
	Fix bug #414198

2007-02-27  Vincent Untz  <vuntz@gnome.org>

	* menu.c: (setup_menuitem): don't connect to the size request signal
	if the icon size is invalid
	* panel-menu-items.c: (panel_place_menu_item_new),
	(panel_desktop_menu_item_new): use an invalid icon size for
	setup_menuitem() if we don't use icon